fix text alignment for logo

--- a/source/css/pages/home.sass
+++ b/source/css/pages/home.sass
@@ -7,6 +7,11 @@
 	width: 3.5em
 	+translateY(10em)
 	+opacity(0)
+	margin: 0 auto
+	@media only screen and (min-width: $second-break)
+		margin: 0 0
+		p
+			margin-left: 2px
 
 .intro-text
 	margin-top: 13%
